----------------------------------------------------------------------------------------------------------------------
Version:
Date:
    Features:
        - Add dependency information for tree and resource spawns, fluid pumping, and some asteroid mining.
        - (SA) Locations (except nauvis) are now part of the default milestone list.
----------------------------------------------------------------------------------------------------------------------
Version: 2.3.1
Date: November 10th 2024
    Bugfixes:
        - Cybersyn now doesn't crash on load.
----------------------------------------------------------------------------------------------------------------------
Version: 2.3.0
Date: November 10th 2024
    Features:
        - (SA) Process accessibilty of captured spawners, which also fixes biter eggs and subsequent Gleba recipes.
        - (SA) Add support for the capture-spawner technology trigger.
        - Add the remaining research triggers and the mining-with-fluid research effect to the dependency/milestone
          analysis.
        - Explain what to do if Yafc fails to load a mod.
        - (SA) Add spoiling time and result to tooltips. Add a clock overlay to icons for perishable items/entities.
    Bugfixes:
        - Override debug.traceback with a method that replaces the chunk IDs with __modname__/path/to/file.lua that is used by some mods.
    Internal changes:
        - Using the LuaContext after it is freed now produces a better error.
----------------------------------------------------------------------------------------------------------------------
Version: 2.2.0
Date: November 6th 2024
    Features:
        - Add pseudo-items representing a recipe's total sushi-inputs and sushi-outputs.
          They can be toggled on/off in the LMB of the recipe.
        - Add the ability to select qualities for crafters, accumulators, modules, and beacons.
    Bugfixes: